version/0.11/_sources/_autosummary/ansys.api.pyensight.ens_part_vector_arrow.ENS_PART_VECTOR_ARROW.rst.txt
ENS\_PART\_VECTOR\_ARROW
========================

.. currentmodule:: ansys.api.pyensight.ens_part_vector_arrow

.. autoclass:: ENS_PART_VECTOR_ARROW

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      ENS_PART_VECTOR_ARROW.addchild
      
      
      ENS_PART_VECTOR_ARROW.attrgroupinfo
      
      
      ENS_PART_VECTOR_ARROW.attrinfo
      
      
      ENS_PART_VECTOR_ARROW.attrissensitive
      
      
      ENS_PART_VECTOR_ARROW.attrtree
      
      
      ENS_PART_VECTOR_ARROW.cmdlang_rec_info
      
      
      ENS_PART_VECTOR_ARROW.createpart
      
      
      ENS_PART_VECTOR_ARROW.destroy
      
      
      ENS_PART_VECTOR_ARROW.get_values
      
      
      ENS_PART_VECTOR_ARROW.getattr
      
      
      ENS_PART_VECTOR_ARROW.getattrs
      
      
      ENS_PART_VECTOR_ARROW.getmetatag
      
      
      ENS_PART_VECTOR_ARROW.hasmetatag
      
      
      ENS_PART_VECTOR_ARROW.highlight_part
      
      
      ENS_PART_VECTOR_ARROW.realtimemode
      
      
      ENS_PART_VECTOR_ARROW.removechild
      
      
      ENS_PART_VECTOR_ARROW.setattr
      
      
      ENS_PART_VECTOR_ARROW.setattr_begin
      
      
      ENS_PART_VECTOR_ARROW.setattr_end
      
      
      ENS_PART_VECTOR_ARROW.setattr_status
      
      
      ENS_PART_VECTOR_ARROW.setattrs
      
      
      ENS_PART_VECTOR_ARROW.setmetatag
      
      
      ENS_PART_VECTOR_ARROW.simba_get_values
      
      
      ENS_PART_VECTOR_ARROW.simba_tracepaths
      
      
      ENS_PART_VECTOR_ARROW.tracepaths
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      ENS_PART_VECTOR_ARROW.ACTIVE
      ENS_PART_VECTOR_ARROW.ADJCOORDSCALEFACTOR
      ENS_PART_VECTOR_ARROW.ADJCOORDTRANSVEC
      ENS_PART_VECTOR_ARROW.ADJCOORDVARSCALEFACTOR
      ENS_PART_VECTOR_ARROW.ADJCOORDXVARIABLE
      ENS_PART_VECTOR_ARROW.ADJCOORDYVARIABLE
      ENS_PART_VECTOR_ARROW.ADJCOORDZVARIABLE
      ENS_PART_VECTOR_ARROW.ALPHABY
      ENS_PART_VECTOR_ARROW.ALPHABYPALETTE
      ENS_PART_VECTOR_ARROW.ARROWATTACH
      ENS_PART_VECTOR_ARROW.ARROWLOCATION
      ENS_PART_VECTOR_ARROW.ARROWTYPE
      ENS_PART_VECTOR_ARROW.BOUNDINGREP
      ENS_PART_VECTOR_ARROW.CASENUMBER
      ENS_PART_VECTOR_ARROW.CHILDREN
      ENS_PART_VECTOR_ARROW.CLIP
      ENS_PART_VECTOR_ARROW.COLORBYPALETTE
      ENS_PART_VECTOR_ARROW.COLORBYPROJECTION
      ENS_PART_VECTOR_ARROW.COLORBYRGB
      ENS_PART_VECTOR_ARROW.COMPONENT
      ENS_PART_VECTOR_ARROW.CULLELEMENTS
      ENS_PART_VECTOR_ARROW.DENSITY
      ENS_PART_VECTOR_ARROW.DESCRIPTION
      ENS_PART_VECTOR_ARROW.DISPLACEBY
      ENS_PART_VECTOR_ARROW.DISPLACEFACTOR
      ENS_PART_VECTOR_ARROW.DISPLAYOFFSET
      ENS_PART_VECTOR_ARROW.DOUBLESIDED
      ENS_PART_VECTOR_ARROW.DTA_BLOCK
      ENS_PART_VECTOR_ARROW.EDIT_TARGET
      ENS_PART_VECTOR_ARROW.ELTBLANKING
      ENS_PART_VECTOR_ARROW.ELTDEFINEDBY
      ENS_PART_VECTOR_ARROW.ELTFEATUREANGLE
      ENS_PART_VECTOR_ARROW.ELTFILTER1ACTIVE
      ENS_PART_VECTOR_ARROW.ELTFILTER1TESTOP
      ENS_PART_VECTOR_ARROW.ELTFILTER1TESTVALUE
      ENS_PART_VECTOR_ARROW.ELTFILTER1TESTVARCOMP
      ENS_PART_VECTOR_ARROW.ELTFILTER1TESTVARIABLE
      ENS_PART_VECTOR_ARROW.ELTFILTER1VARCOMP
      ENS_PART_VECTOR_ARROW.ELTFILTER1VARIABLE
      ENS_PART_VECTOR_ARROW.ELTFILTER2ACTIVE
      ENS_PART_VECTOR_ARROW.ELTFILTER2LOGICALOP
      ENS_PART_VECTOR_ARROW.ELTFILTER2TESTOP
      ENS_PART_VECTOR_ARROW.ELTFILTER2TESTVALUE
      ENS_PART_VECTOR_ARROW.ELTFILTER2TESTVARCOMP
      ENS_PART_VECTOR_ARROW.ELTFILTER2TESTVARIABLE
      ENS_PART_VECTOR_ARROW.ELTFILTER2VARCOMP
      ENS_PART_VECTOR_ARROW.ELTFILTER2VARIABLE
      ENS_PART_VECTOR_ARROW.ELTFILTER3ACTIVE
      ENS_PART_VECTOR_ARROW.ELTFILTER3LOGICALOP
      ENS_PART_VECTOR_ARROW.ELTFILTER3TESTOP
      ENS_PART_VECTOR_ARROW.ELTFILTER3TESTVALUE
      ENS_PART_VECTOR_ARROW.ELTFILTER3TESTVARCOMP
      ENS_PART_VECTOR_ARROW.ELTFILTER3TESTVARIABLE
      ENS_PART_VECTOR_ARROW.ELTFILTER3VARCOMP
      ENS_PART_VECTOR_ARROW.ELTFILTER3VARIABLE
      ENS_PART_VECTOR_ARROW.ELTFILTER4ACTIVE
      ENS_PART_VECTOR_ARROW.ELTFILTER4LOGICALOP
      ENS_PART_VECTOR_ARROW.ELTFILTER4TESTOP
      ENS_PART_VECTOR_ARROW.ELTFILTER4TESTVALUE
      ENS_PART_VECTOR_ARROW.ELTFILTER4TESTVARCOMP
      ENS_PART_VECTOR_ARROW.ELTFILTER4TESTVARIABLE
      ENS_PART_VECTOR_ARROW.ELTFILTER4VARCOMP
      ENS_PART_VECTOR_ARROW.ELTFILTER4VARIABLE
      ENS_PART_VECTOR_ARROW.ELTFILTER5ACTIVE
      ENS_PART_VECTOR_ARROW.ELTFILTER5LOGICALOP
      ENS_PART_VECTOR_ARROW.ELTFILTER5TESTOP
      ENS_PART_VECTOR_ARROW.ELTFILTER5TESTVALUE
      ENS_PART_VECTOR_ARROW.ELTFILTER5TESTVARCOMP
      ENS_PART_VECTOR_ARROW.ELTFILTER5TESTVARIABLE
      ENS_PART_VECTOR_ARROW.ELTFILTER5VARCOMP
      ENS_PART_VECTOR_ARROW.ELTFILTER5VARIABLE
      ENS_PART_VECTOR_ARROW.ELTFILTER6ACTIVE
      ENS_PART_VECTOR_ARROW.ELTFILTER6LOGICALOP
      ENS_PART_VECTOR_ARROW.ELTFILTER6TESTOP
      ENS_PART_VECTOR_ARROW.ELTFILTER6TESTVALUE
      ENS_PART_VECTOR_ARROW.ELTFILTER6TESTVARCOMP
      ENS_PART_VECTOR_ARROW.ELTFILTER6TESTVARIABLE
      ENS_PART_VECTOR_ARROW.ELTFILTER6VARCOMP
      ENS_PART_VECTOR_ARROW.ELTFILTER6VARIABLE
      ENS_PART_VECTOR_ARROW.ELTREPPOINTSNORMALS
      ENS_PART_VECTOR_ARROW.ELTREPRESENTATION
      ENS_PART_VECTOR_ARROW.ELTSHRINKFACTOR
      ENS_PART_VECTOR_ARROW.ENS_DETAILS
      ENS_PART_VECTOR_ARROW.ENS_KIND
      ENS_PART_VECTOR_ARROW.ENS_MATERIAL
      ENS_PART_VECTOR_ARROW.ENS_PARENT_PART
      ENS_PART_VECTOR_ARROW.ENS_PLIST_KEY_SEL_0
      ENS_PART_VECTOR_ARROW.ENS_PLIST_KEY_SEL_1
      ENS_PART_VECTOR_ARROW.ENS_PLIST_KEY_SEL_2
      ENS_PART_VECTOR_ARROW.ENS_PLIST_KEY_SEL_3
      ENS_PART_VECTOR_ARROW.ENS_PLIST_KEY_SEL_4
      ENS_PART_VECTOR_ARROW.ENS_PLIST_KEY_SEL_5
      ENS_PART_VECTOR_ARROW.ENS_PLIST_KEY_SEL_6
      ENS_PART_VECTOR_ARROW.ENS_PLIST_KEY_SEL_7
      ENS_PART_VECTOR_ARROW.ENS_PLIST_KEY_SEL_8
      ENS_PART_VECTOR_ARROW.ENS_PLIST_KEY_SEL_9
      ENS_PART_VECTOR_ARROW.ENS_SYMMETRY_AXIS
      ENS_PART_VECTOR_ARROW.ENS_SYMMETRY_COUNT
      ENS_PART_VECTOR_ARROW.ENS_TURBO_STAGE
      ENS_PART_VECTOR_ARROW.ENS_TURBO_VDIM
      ENS_PART_VECTOR_ARROW.ENS_TURBO_VIEW
      ENS_PART_VECTOR_ARROW.ENS_UNITS_LABEL
      ENS_PART_VECTOR_ARROW.ENTITYLABELELT
      ENS_PART_VECTOR_ARROW.ENTITYLABELNODE
      ENS_PART_VECTOR_ARROW.FILLPATTERN
      ENS_PART_VECTOR_ARROW.FLUENTTEXTUREAXIS
      ENS_PART_VECTOR_ARROW.FLUENTTEXTUREROTANGLE
      ENS_PART_VECTOR_ARROW.FLUENTTEXTURESCALE
      ENS_PART_VECTOR_ARROW.HANDLES_ENABLED
      ENS_PART_VECTOR_ARROW.HAS0DELEMENTS
      ENS_PART_VECTOR_ARROW.HAS1DELEMENTS
      ENS_PART_VECTOR_ARROW.HAS2DELEMENTS
      ENS_PART_VECTOR_ARROW.HAS3DELEMENTS
      ENS_PART_VECTOR_ARROW.HIDDENLINE
      ENS_PART_VECTOR_ARROW.HIDDENSURFACE
      ENS_PART_VECTOR_ARROW.IJKAXIS
      ENS_PART_VECTOR_ARROW.IJKAXISSCALE
      ENS_PART_VECTOR_ARROW.ISGROUP
      ENS_PART_VECTOR_ARROW.LIGHTAMBIENT
      ENS_PART_VECTOR_ARROW.LIGHTDIFFUSE
      ENS_PART_VECTOR_ARROW.LIGHTEMISSIVE
      ENS_PART_VECTOR_ARROW.LIGHTREFRACTION
      ENS_PART_VECTOR_ARROW.LIGHTSPECULARINTENSITY
      ENS_PART_VECTOR_ARROW.LIGHTSPECULARREFLECTION
      ENS_PART_VECTOR_ARROW.LIGHTSPECULARSHINE
      ENS_PART_VECTOR_ARROW.LIGHTSPECULARTINT
      ENS_PART_VECTOR_ARROW.LINESTYLE
      ENS_PART_VECTOR_ARROW.LINEWIDTH
      ENS_PART_VECTOR_ARROW.LPARTPARENT
      ENS_PART_VECTOR_ARROW.MATERIALBASETYPE
      ENS_PART_VECTOR_ARROW.MATERIALDESCRIPTION
      ENS_PART_VECTOR_ARROW.MESHTYPE
      ENS_PART_VECTOR_ARROW.METADATA
      ENS_PART_VECTOR_ARROW.MIRRORORIGINAL
      ENS_PART_VECTOR_ARROW.NODEDETAIL
      ENS_PART_VECTOR_ARROW.NODEORIENTATIONANGLE
      ENS_PART_VECTOR_ARROW.NODEORIENTATIONAXIS
      ENS_PART_VECTOR_ARROW.NODERANGESTEPI
      ENS_PART_VECTOR_ARROW.NODERANGESTEPJ
      ENS_PART_VECTOR_ARROW.NODERANGESTEPK
      ENS_PART_VECTOR_ARROW.NODESCALE
      ENS_PART_VECTOR_ARROW.NODESIZEBY
      ENS_PART_VECTOR_ARROW.NODETYPE
      ENS_PART_VECTOR_ARROW.NODEVARIABLE
      ENS_PART_VECTOR_ARROW.OPAQUENESS
      ENS_PART_VECTOR_ARROW.PARENT
      ENS_PART_VECTOR_ARROW.PARTNUMBER
      ENS_PART_VECTOR_ARROW.PARTNUMELE
      ENS_PART_VECTOR_ARROW.PARTNUMELECLIENT
      ENS_PART_VECTOR_ARROW.PARTTYPE
      ENS_PART_VECTOR_ARROW.PARTTYPEENUM
      ENS_PART_VECTOR_ARROW.PATHNAME
      ENS_PART_VECTOR_ARROW.PERIODICSECTIONS
      ENS_PART_VECTOR_ARROW.PREDEFINEDMATERIAL
      ENS_PART_VECTOR_ARROW.PROJECTION
      ENS_PART_VECTOR_ARROW.PROJECT_MASK
      ENS_PART_VECTOR_ARROW.REDUCEPOLYGONS
      ENS_PART_VECTOR_ARROW.REDUCEPOLYGONSFACTOR
      ENS_PART_VECTOR_ARROW.REFFRAME
      ENS_PART_VECTOR_ARROW.RENDERINGREFLECTIONID
      ENS_PART_VECTOR_ARROW.REVERSENORMAL
      ENS_PART_VECTOR_ARROW.SCALEFACTOR
      ENS_PART_VECTOR_ARROW.SELECTED
      ENS_PART_VECTOR_ARROW.SHADING
      ENS_PART_VECTOR_ARROW.SHOWSFT
      ENS_PART_VECTOR_ARROW.SOURCES
      ENS_PART_VECTOR_ARROW.SPECIFYSYMMETRYORIGIN
      ENS_PART_VECTOR_ARROW.SYMMETRYANGLE
      ENS_PART_VECTOR_ARROW.SYMMETRYAXIS
      ENS_PART_VECTOR_ARROW.SYMMETRYDELTA
      ENS_PART_VECTOR_ARROW.SYMMETRYMIRRORX
      ENS_PART_VECTOR_ARROW.SYMMETRYMIRRORXY
      ENS_PART_VECTOR_ARROW.SYMMETRYMIRRORXYZ
      ENS_PART_VECTOR_ARROW.SYMMETRYMIRRORXZ
      ENS_PART_VECTOR_ARROW.SYMMETRYMIRRORY
      ENS_PART_VECTOR_ARROW.SYMMETRYMIRRORYZ
      ENS_PART_VECTOR_ARROW.SYMMETRYMIRRORZ
      ENS_PART_VECTOR_ARROW.SYMMETRYORIGIN
      ENS_PART_VECTOR_ARROW.SYMMETRYRINSTANCES
      ENS_PART_VECTOR_ARROW.SYMMETRYTYPE
      ENS_PART_VECTOR_ARROW.TEXTURECOORDTYPE
      ENS_PART_VECTOR_ARROW.TEXTUREINTERPOLATION
      ENS_PART_VECTOR_ARROW.TEXTUREMODE
      ENS_PART_VECTOR_ARROW.TEXTUREOBJECT
      ENS_PART_VECTOR_ARROW.TEXTUREORIGIN
      ENS_PART_VECTOR_ARROW.TEXTUREORIGINNODEID
      ENS_PART_VECTOR_ARROW.TEXTUREORIGINUSE
      ENS_PART_VECTOR_ARROW.TEXTUREREPEATMODE
      ENS_PART_VECTOR_ARROW.TEXTURESORIGINNODEID
      ENS_PART_VECTOR_ARROW.TEXTURESVARIABLE
      ENS_PART_VECTOR_ARROW.TEXTURESVECTOR
      ENS_PART_VECTOR_ARROW.TEXTURETORIGINNODEID
      ENS_PART_VECTOR_ARROW.TEXTURETVARIABLE
      ENS_PART_VECTOR_ARROW.TEXTURETVECTOR
      ENS_PART_VECTOR_ARROW.THRESHOLDHIGH
      ENS_PART_VECTOR_ARROW.THRESHOLDLOW
      ENS_PART_VECTOR_ARROW.THRESHOLDS
      ENS_PART_VECTOR_ARROW.TIPRGB
      ENS_PART_VECTOR_ARROW.TIPSHAFT
      ENS_PART_VECTOR_ARROW.TIPSHAPE
      ENS_PART_VECTOR_ARROW.TIPSIZEFIXED
      ENS_PART_VECTOR_ARROW.TIPSIZEPROPORTIONAL
      ENS_PART_VECTOR_ARROW.TIPSIZEREP
      ENS_PART_VECTOR_ARROW.UUID
      ENS_PART_VECTOR_ARROW.VARIABLE
      ENS_PART_VECTOR_ARROW.VDBMESHADAPTIVITY
      ENS_PART_VECTOR_ARROW.VDBMESHOFFSET
      ENS_PART_VECTOR_ARROW.VDBNARROWBANDSIZE
      ENS_PART_VECTOR_ARROW.VDBVOXELSIZERATIO
      ENS_PART_VECTOR_ARROW.VIEWPORTVIS
      ENS_PART_VECTOR_ARROW.VISIBILITYELT
      ENS_PART_VECTOR_ARROW.VISIBILITYLINE
      ENS_PART_VECTOR_ARROW.VISIBILITYNODE
      ENS_PART_VECTOR_ARROW.VISIBLE
      ENS_PART_VECTOR_ARROW.VOLUMEQUALITY
      ENS_PART_VECTOR_ARROW.VOLUMERENDERINGTYPE
      ENS_PART_VECTOR_ARROW.__OBJID__
      ENS_PART_VECTOR_ARROW.objid
   
   